# PIC32-ArtigoZephyr

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  debug.conf  prj.conf
app/boards/: pic32cm1216mc.overlay
app/inc/: app.h  button.h  display.h  modbus.h  sensor.h
app/inc/drivers/: rtc.h  watchdog.h
app/inc/setup/: setup_hw.h
app/inc/tasks/: tasks.h
app/src/: app.c  button.c  main.c  modbus.c  sensor.c  shell_nvs.c
app/src/drivers/: rtc.c  watchdog.c
app/src/setup/: setup_hw.c
app/src/tasks/: task_ui.c
boards/microchip/pic32cm1216mc/: Kconfig.pic32cm1216mc  board.cmake  board.yml  pic32cm1216mc-pinctrl.dtsi  pic32cm1216mc.dts  pic32cm1216mc_defconfig
doc/: DEBUG.md
software/: Makefile  main.py  requirements.txt
software/pic32_modbus/: __init__.py  gui.py  modbus_model.py  poller.py  registers.py
